--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "html2canvas": "^1.0.0-rc.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "swiper": "^4.5.0",
     "vue": "^2.6.6",
+    "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
