--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.1",
     "html2canvas": "^1.0.0-rc.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
@@ -15,7 +16,8 @@
     "vue": "^2.6.6",
     "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "wenlist": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
