--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "better-scroll": "^1.15.1",
+    "dayjs": "^1.8.12",
     "html2canvas": "^1.0.0-rc.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "store2": "^2.7.1",
     "swiper": "^4.5.0",
+    "vconsole": "^3.3.0",
     "vue": "^2.6.6",
     "vue-clipboard2": "^0.3.0",
     "vue-router": "^3.0.1",
