--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "store2": "^2.7.1",
     "swiper": "^4.5.0",
+    "vant": "^1.6.14",
     "vconsole": "^3.3.0",
     "vue": "^2.6.6",
     "vue-clipboard2": "^0.3.0",
