--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html2canvas": "^1.0.0-rc.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
+    "qrcodejs2": "^0.0.2",
     "store2": "^2.7.1",
     "swiper": "^4.5.0",
     "vant": "^1.6.14",
