--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html2canvas": "^1.0.0-rc.1",
     "lrz": "^4.9.40",
     "mint-ui": "^2.2.13",
+    "qrcode": "^1.3.3",
     "qrcodejs2": "0.0.2",
     "store2": "^2.7.1",
     "swiper": "^4.5.0",
