--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vconsole": "^3.3.0",
     "vue": "^2.6.6",
     "vue-clipboard2": "^0.3.0",
+    "vue-jsonp": "^0.1.8",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.2.6",
     "vuex": "^3.0.1",
