--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.15.1",
     "dayjs": "^1.8.12",
+    "fastclick": "^1.0.6",
     "html2canvas": "^1.0.0-rc.1",
     "lrz": "^4.9.40",
     "mint-ui": "^2.2.13",
     "qrcode": "^1.3.3",
     "store2": "^2.7.1",
     "swiper": "^4.5.0",
+    "v-tap": "^3.0.3",
     "vant": "^1.6.14",
     "vconsole": "^3.3.0",
     "vue": "^2.6.6",
