--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.15.1",
+    "classlist-polyfill": "^1.2.0",
     "dayjs": "^1.8.12",
     "fastclick": "^1.0.6",
     "html2canvas": "^1.0.0-rc.1",
